--- a/tools/custom-organization-policy-library/tests/test_cases/fixture.yaml
+++ b/tools/custom-organization-policy-library/tests/test_cases/fixture.yaml
@@ -2,8 +2,17 @@ before_tests:
   - command: gcloud kms keyrings create {{ prefix }}-key-ring-1 --location=asia-southeast2
     expected_result:
       return_code: 0
+  - command: gcloud iam service-accounts create iam-sa-binding-allowed
+    expected_result:
+      return_code: 0
+  - command: gcloud iam service-accounts create iam-sa-binding-unallowed
+    expected_result:
+      return_code: 0
 
 after_tests:
-  - command: gcloud kms keyrings describe {{ prefix }}-key-ring-1 --location=asia-southeast2
+  - command: gcloud iam service-accounts delete iam-sa-binding-allowed@{{ project }}.iam.gserviceaccount.com
+    expected_result:
+      return_code: 0
+  - command: gcloud iam service-accounts delete iam-sa-binding-unallowed@{{ project }}.iam.gserviceaccount.com
     expected_result:
       return_code: 0
