feat: add controls for Cloud DNS

--- a/tools/custom-organization-policy-library/tests/pytest.ini
+++ b/tools/custom-organization-policy-library/tests/pytest.ini
@@ -6,6 +6,9 @@ addopts = --html=report.html --self-contained-html
 markers = 
     cloudkms
     cloudsql
+    dns
+    dns-policy
+    dns-managed-zones
     iam
     mysql
     postgresql
