--- a/tools/custom-organization-policy-library/tests/test_cases/fixture.yaml
+++ b/tools/custom-organization-policy-library/tests/test_cases/fixture.yaml
@@ -1,4 +1,10 @@
 before_tests:
+  - command: >- 
+      gcloud compute networks create cuop-vpc-network
+      --subnet-mode=custom
+      --bgp-routing-mode=global
+    teardown_command: >-
+      gcloud compute networks delete cuop-vpc-network
   - command: gcloud kms keyrings create {{ prefix }}-key-ring-1 --location=asia-southeast2
     expected_result:
       return_code: 0
