feat: add compute instances policies

--- a/tools/custom-organization-policy-library/tests/pytest.ini
+++ b/tools/custom-organization-policy-library/tests/pytest.ini
@@ -6,6 +6,8 @@ addopts = --html=report.html --self-contained-html
 markers = 
     cloudkms
     cloudsql
+    compute
+    compute-instance
     dns
     dns-policy
     dns-managed-zones
