--- a/tools/custom-organization-policy-library/tests/test_cases/fixture.yaml
+++ b/tools/custom-organization-policy-library/tests/test_cases/fixture.yaml
@@ -5,7 +5,17 @@ before_tests:
       --bgp-routing-mode=global
     teardown_command: >-
       gcloud compute networks delete cuop-vpc-network
-  - command: gcloud kms keyrings create {{ prefix }}-key-ring-1 --location=asia-southeast2
+  - command: >- 
+      gcloud compute networks subnets create subnet-vm 
+      --network=cuop-vpc-network 
+      --range=10.10.0.0/24 
+      --region=asia-southeast2
+    teardown_command: >-
+      gcloud compute networks subnets delete subnet-vm 
+      --region=asia-southeast2
+  - command: >-
+      gcloud kms keyrings create {{ prefix }}-key-ring-1 
+      --location=asia-southeast2
     expected_result:
       return_code: 0
   - command: gcloud iam service-accounts create iam-sa-binding-allowed
