feat: adding ssh and rdp rules and tests

--- a/tools/custom-organization-policy-library/tests/pytest.ini
+++ b/tools/custom-organization-policy-library/tests/pytest.ini
@@ -11,10 +11,13 @@ markers =
     dns
     dns-policy
     dns-managed-zones
+    firewall
+    firewall-policy
+    firewall-vpc-rule
     iam
     mysql
     postgresql
     sqlserver
     storage
     gke
-
+    
