feat:adding constraint for load balancers

--- a/tools/custom-organization-policy-library/tests/pytest.ini
+++ b/tools/custom-organization-policy-library/tests/pytest.ini
@@ -16,6 +16,10 @@ markers =
     firewall-vpc-rule
     iam
     mysql
+    network
+    network_backend_service
+    network_lb
+    network_ssl_policy
     postgresql
     sqlserver
     storage
