feat: adding policies

--- a/tools/custom-organization-policy-library/tests/pytest.ini
+++ b/tools/custom-organization-policy-library/tests/pytest.ini
@@ -4,7 +4,11 @@ log_cli_level = DEBUG
 render_collapsed = passed, failed, error
 addopts = --html=report.html --self-contained-html
 markers = 
+    cloudfunctions
+    cloudfunctions_function
     cloudkms
+    cloudrun
+    cloudrun_service
     cloudsql
     compute
     compute-instance
