--- a/tools/custom-organization-policy-library/tests/test_cases/fixture.yaml
+++ b/tools/custom-organization-policy-library/tests/test_cases/fixture.yaml
@@ -1,4 +1,7 @@
 before_tests:
+  # General
+  - command: gcloud iam service-accounts create {{ prefix }}-iam-sa
+  - command: gcloud storage buckets create gs://{{ prefix }}-cuop-bucket --default-storage-class=standard --uniform-bucket-level-access --location asia-southeast2
   # KMS keys
   - command: >-
       gcloud kms keyrings create {{ prefix }}-key-ring-1 --location=asia-southeast2
@@ -8,8 +11,6 @@ before_tests:
       gcloud kms keys create {{ prefix }}-key-1 --keyring="{{ prefix }}-key-ring-1" --location=asia-southeast2 --purpose=encryption --default-algorithm=google-symmetric-encryption --protection-level=software --rotation-period=31536000s --next-rotation-time=2026-05-05T01:02:03
     expected_result:
       return_code: 0_or_1_already_exists
-  - command: >-
-      gcloud kms keys add-iam-policy-binding {{ prefix }}-key-1 --keyring="{{ prefix }}-key-ring-1" --location=asia-southeast2 --member=serviceAccount:service-{{ project_number }}@container-engine-robot.iam.gserviceaccount.com --role=roles/cloudkms.cryptoKeyEncrypterDecrypter
   # IAM CuOP
   - command: gcloud iam service-accounts create iam-sa-binding-allowed
   - command: gcloud iam service-accounts create iam-sa-binding-unallowed
@@ -18,13 +19,18 @@ before_tests:
   - command: gcloud compute networks subnets create subnet-vm --network=cuop-vpc-network --range=10.10.0.0/24 --region=asia-southeast2
   - command: gcloud compute networks subnets create subnet-gke --network=cuop-vpc-network --range=10.10.1.0/24 --region=asia-southeast2
   # Network CuOP for Load Balancer
-  - command: gcloud storage buckets create gs://{{ prefix }}-cuop-bucket --default-storage-class=standard --uniform-bucket-level-access
   - command: gcloud compute addresses create {{ prefix }}-cuop--ip --network-tier=PREMIUM --ip-version=IPV4 --global
   - command: gcloud compute backend-buckets create {{ prefix }}-be-bucket --gcs-bucket-name {{ prefix }}-cuop-bucket 
   - command: gcloud compute url-maps create {{ prefix }}-http-lb --default-backend-bucket {{ prefix }}-be-bucket
   # Firewall CuOP
   - command: gcloud compute network-firewall-policies create cuop-fw-policy --global
+  # IAM Bindings
+  - command: gcloud kms keys add-iam-policy-binding {{ prefix }}-key-1 --keyring="{{ prefix }}-key-ring-1" --location=asia-southeast2 --member=serviceAccount:service-{{ project_number }}@container-engine-robot.iam.gserviceaccount.com --role=roles/cloudkms.cryptoKeyEncrypterDecrypter
+  - command: gcloud projects add-iam-policy-binding {{ project }} --member=serviceAccount:{{ project_number }}-compute@developer.gserviceaccount.com  --role=roles/cloudbuild.builds.builder
 after_tests:
+  # General
+  - command: gcloud iam service-accounts delete {{ prefix }}-iam-sa@{{ project }}.iam.gserviceaccount.com
+  - command: gcloud storage buckets delete gs://{{ prefix }}-cuop-bucket
   # IAM CuOP
   - command: gcloud iam service-accounts delete iam-sa-binding-allowed@{{ project }}.iam.gserviceaccount.com
   - command: gcloud iam service-accounts delete iam-sa-binding-unallowed@{{ project }}.iam.gserviceaccount.com
@@ -33,7 +39,6 @@ after_tests:
   - command: gcloud compute networks subnets delete subnet-vm --region=asia-southeast2
   - command: gcloud compute networks subnets delete subnet-gke --region=asia-southeast2
   # Network CuOP for Load Balancer
-  - command: gcloud storage buckets delete gs://{{ prefix }}-cuop-bucket
   - command: gcloud compute addresses delete {{ prefix }}-cuop--ip --global
   - command: gcloud compute backend-buckets delete {{ prefix }}-be-bucket 
   - command: gcloud compute url-maps delete {{ prefix }}-http-lb 
