fix: use bash instead of sh

--- a/tools/custom-organization-policy-library/Makefile
+++ b/tools/custom-organization-policy-library/Makefile
@@ -50,11 +50,11 @@ simulate: clean constraints policies
 
 .PHONY: deploy-constraints
 deploy-constraints:
-	sh scripts/deploy.sh constraint $(OUTPUT_GCLOUD)/constraints
+	bash scripts/deploy.sh constraint $(OUTPUT_GCLOUD)/constraints
 
 .PHONY: deploy-policies
 deploy-policies:
-	sh scripts/deploy.sh policy $(OUTPUT_GCLOUD)/policies
+	bash scripts/deploy.sh policy $(OUTPUT_GCLOUD)/policies
 
 .PHONY: deploy
 deploy: deploy-constraints deploy-policies
