--- a/tools/custom-organization-policy-library/values.yaml
+++ b/tools/custom-organization-policy-library/values.yaml
@@ -15,6 +15,8 @@
 #@data/values
 ---
 organization: '11111111'
+deployment:
+  parent: projects/my-project
 bundles:
   pci-dss: false
   cis: false
