--- a/tools/custom-organization-policy-library/cloudbuild.yaml
+++ b/tools/custom-organization-policy-library/cloudbuild.yaml
@@ -59,16 +59,13 @@ steps:
         export PROJECT_NUMBER="$_PROJECT_NUMBER"
         export PREFIX="$_PREFIX"
         pytest main.py -m storage
-        TIMESTAMP=$$(date +%Y%m%d%H%M%S)
-        gcloud storage cp report.html gs://custom-org-policy-library-build/artifacts/report_$${TIMESTAMP}.html
+        mv report.html ${SHORT_SHA}_report.html
     dir: /workspace/tools/custom-organization-policy-library/tests
     entrypoint: bash
 logsBucket: 'gs://custom-org-policy-library-build/logs'
 artifacts:
   objects:
-    location: 'gs://custom-org-policy-library-build/tests'
+    location: 'gs://custom-org-policy-library-build/tests/'
     paths:
-      - 'tools/custom-organization-policy-library/tests/report.html'
-      - 'tests/report.html'
-      - 'report.html'
+      - 'tools/custom-organization-policy-library/tests/${SHORT_SHA}_report.html'
 
