--- a/tools/custom-organization-policy-library/cloudbuild.yaml
+++ b/tools/custom-organization-policy-library/cloudbuild.yaml
@@ -31,22 +31,22 @@ steps:
         make build
     dir: /workspace/tools/custom-organization-policy-library
     entrypoint: bash
-  - name: gcr.io/cloud-builders/gcloud
-    args:
-      - '-c'
-      - |
-        apt-get update && apt-get install -y make
-        make deploy-constraints
-    dir: /workspace/tools/custom-organization-policy-library
-    entrypoint: bash
-  - name: gcr.io/cloud-builders/gcloud
-    args:
-      - '-c'
-      - |
-        apt-get update && apt-get install -y make
-        make deploy-policies
-    dir: /workspace/tools/custom-organization-policy-library
-    entrypoint: bash
+  # - name: gcr.io/cloud-builders/gcloud
+  #   args:
+  #     - '-c'
+  #     - |
+  #       apt-get update && apt-get install -y make
+  #       make deploy-constraints
+  #   dir: /workspace/tools/custom-organization-policy-library
+  #   entrypoint: bash
+  # - name: gcr.io/cloud-builders/gcloud
+  #   args:
+  #     - '-c'
+  #     - |
+  #       apt-get update && apt-get install -y make
+  #       make deploy-policies
+  #   dir: /workspace/tools/custom-organization-policy-library
+  #   entrypoint: bash
   - name: gcr.io/cloud-builders/gcloud
     args:
       - '-c'
@@ -61,6 +61,7 @@ steps:
         mv report.html ${SHORT_SHA}_report.html
     dir: /workspace/tools/custom-organization-policy-library/tests
     entrypoint: bash
+    timeout: '10800s'
 logsBucket: 'gs://custom-org-policy-library-build/logs'
 artifacts:
   objects:
