fix: add test cases

--- a/tools/custom-organization-policy-library/tests/test_cases/cloudfunctions/function.yaml
+++ b/tools/custom-organization-policy-library/tests/test_cases/cloudfunctions/function.yaml
@@ -8,6 +8,7 @@ shared_config:
     trigger-http: true
     source: ./test_cases/cloudfunctions/source/
     entry-point: hello_http
+    binary-authorization: default
   default_markers:
     - cloudfunctions
 
