--- a/tools/custom-organization-policy-library/tests/test_cases/cloudrun/service.yaml
+++ b/tools/custom-organization-policy-library/tests/test_cases/cloudrun/service.yaml
@@ -4,6 +4,7 @@ shared_config:
   default_command_flags: 
     image: "us-docker.pkg.dev/cloudrun/container/hello:latest"
     service-account: "{{ prefix }}-iam-sa"
+    binary-authorization: default
   default_markers:
     - cloudrun
     - cloudrun_service
