--- a/tools/custom-organization-policy-library/tests/test_cases/gke/cluster.yaml
+++ b/tools/custom-organization-policy-library/tests/test_cases/gke/cluster.yaml
@@ -8,6 +8,7 @@ shared_config:
     machine-type: n2d-standard-2
     image-type: COS_CONTAINERD
     metadata: disable-legacy-endpoints=true
+    enable-private-endpoint: true
     enable-private-nodes: true
     enable-ip-alias: true
     network: projects/{{ project }}/global/networks/cuop-vpc-network
@@ -24,8 +25,11 @@ shared_config:
     enable-shielded-nodes: true
     security-group: gke-security-groups@vannick.joonix.net
     binauthz-evaluation-mode: PROJECT_SINGLETON_POLICY_ENFORCE
+    boot-disk-kms-key: projects/{{ project }}/locations/asia-southeast2/keyRings/{{ prefix }}-key-ring-1/cryptoKeys/{{ prefix }}-key-1 
     database-encryption-key: projects/{{ project }}/locations/asia-southeast2/keyRings/{{ prefix }}-key-ring-1/cryptoKeys/{{ prefix }}-key-1 
     enable-confidential-nodes: true
+    shielded-secure-boot: true
+    shielded-integrity-monitoring: true
   default_markers:
     - gke
 
@@ -33,6 +37,47 @@ gke_allowed:
   steps:
   - expected_result:
       return_code: 0
+
+gke_no_private_endpoint:
+  steps:
+  - command_flags:
+      enable-private-endpoint: false
+    expected_result:
+      return_code: 1
+      stderr: customConstraints/custom.gkeRequirePrivateEndpoint
+
+gke_absent_private_endpoint:
+  steps:
+  - command_flags:
+      enable-private-endpoint: absent
+    expected_result:
+      return_code: 1
+      stderr: customConstraints/custom.gkeRequirePrivateEndpoint
+
+gke_no_boot_disk_encryption:
+  steps:
+  - command_flags:
+      boot-disk-kms-key: absent
+    expected_result:
+      return_code: 1
+      stderr: customConstraints/custom.gkeRequireNodePoolCMEKEncryption
+
+gke_no_secure_boot:
+  steps:
+  - command_flags:
+      shielded-secure-boot: false
+    expected_result:
+      return_code: 1
+      stderr: customConstraints/custom.gkeRequireSecureBoot
+
+gke_absent_secure_boot:
+  steps:
+  - command_flags:
+      shielded-secure-boot: absent
+      shielded-integrity-monitoring: absent
+    expected_result:
+      return_code: 1
+      stderr: customConstraints/custom.gkeRequireSecureBoot
 
 gke_version_1_29:
   steps:
